# Squiz

./: .env  .gitignore  Anchor.toml  App.tsx  README.md  app.json  eas.json  package-lock.json  package.json  schema.sql  tsconfig.json  tsconfig.test.json  withMWA.js
backend/: .gitignore  README.md  index.ts  package.json  query.js  server.ts
backend-resolver/: .env.example  package.json
backend-resolver/src/: config.ts  escrow-resolver.ts  index.ts
migrations/: 001_treasury_columns.sql  005_skr_quests.sql
programs/seekerrank-escrow/: Cargo.toml
programs/seekerrank-escrow/src/: error.rs  lib.rs  state.rs
programs/seekerrank-escrow/src/instructions/: deposit_sol.rs  deposit_spl.rs  initialize_escrow.rs  mod.rs  refund_match.rs  resolve_match.rs
src/: polyfills.ts
src/config/: constants.ts  firebase.ts  supabase.ts  theme.ts
src/hooks/: useAuth.ts  useWallet.ts
src/lib/: storage.ts  store.ts
src/screens/: BattleScreen.tsx  ConnectWalletScreen.tsx  DailyQuestsScreen.tsx  DepositScreen.tsx  HomeScreen.tsx  LeaderboardScreen.tsx  MatchHistoryScreen.tsx  MatchmakingScreen.tsx  ProfileScreen.tsx  ResultsScreen.tsx
src/services/ai/: antiCheat.ts  questionGenerator.ts
src/services/db/: database.ts  neon.ts
src/services/explorer/: solscan.ts
src/services/firebase/: firestore.ts  matchResult.ts
src/services/matchmaking/: appPresence.ts  liveMatchmaking.ts  livePresence.ts  matchStats.ts  ratingSystem.ts
src/services/wallet/: escrow.ts  escrowInstructions.ts  (+3 more)
src/types/: index.ts
temp_wallet_app/: package-lock.json
tests/: seekerrank-escrow.ts
(+1 files in other folders)
