[package]
name = "seekerrank-escrow"
version = "0.1.0"
description = "SeekerRank on-chain escrow for SOL and SPL token wagers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "seekerrank_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
blake3 = "=1.5.5"
